Fix bug show google maps on iOS

--- a/src/pages/direction-stop/direction-stop.scss
+++ b/src/pages/direction-stop/direction-stop.scss
@@ -1,3 +1,6 @@
+ion-app._gmaps_cdv_ .nav-decor{
+  background-color: transparent !important;
+}
 page-direction-stop {
 
 }
